[tool.poetry]
name = "pb_pdb"
version = "0.1.0"
description = ""
authors = ["vaclav-v"]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.5"
trello = "^0.9.7"
dropbox = "^11.34.0"
boto3 = "^1.26.65"
selenium = "^4.8.0"
pillow = "^10.1.0"
fastapi = "^0.104.1"
pydantic = "^2.4.2"
loguru = "^0.7.2"
pb-admin = {git = "https://github.com/vcslav-v/pb_admin.git"}
alembic = "^1.12.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
